crates/glyim-typeck/tests/snapshots/snapshot_errors__snapshot_assign_to_immutable.snap
---
source: crates/glyim-typeck/tests/snapshot_errors.rs
expression: errors
---
[
    AssignToImmutable {
        name: "x",
        expr_id: ExprId(
            0,
        ),
        span: (
            0,
            0,
        ),
    },
]
