crates/glyim-typeck/tests/snapshots/snapshot_errors__snapshot_deref_non_pointer.snap
---
source: crates/glyim-typeck/tests/snapshot_errors.rs
expression: errors
---
[
    DerefNonPointer {
        found: Int,
        expr_id: ExprId(
            4,
        ),
    },
    InvalidReturnType {
        expected: Int,
        found: Never,
    },
]
