crates/glyim-typeck/tests/snapshots/snapshot_errors__snapshot_invalid_cast_to_str.snap
---
source: crates/glyim-typeck/tests/snapshot_errors.rs
expression: errors
---
[
    MismatchedTypes {
        expected: Str,
        found: Int,
        expr_id: ExprId(
            0,
        ),
        span: (
            13,
            15,
        ),
    },
]
