crates/glyim-typeck/tests/snapshots/snapshot_errors__snapshot_missing_field_in_struct_lit.snap
---
source: crates/glyim-typeck/tests/snapshot_errors.rs
expression: errors
---
[
    MissingField {
        struct_name: Symbol(
            0,
        ),
        field: Symbol(
            2,
        ),
    },
    InvalidReturnType {
        expected: Int,
        found: Named(
            Symbol(
                0,
            ),
        ),
    },
]
