crates/glyim-typeck/tests/snapshots/snapshot_errors__snapshot_non_exhaustive_match_user_enum.snap
---
source: crates/glyim-typeck/tests/snapshot_errors.rs
expression: errors
---
[
    NonExhaustiveMatch {
        missing: [
            "Green",
            "Blue",
        ],
        span: (
            51,
            87,
        ),
    },
]
