crates/glyim-typeck/tests/snapshots/snapshot_errors__snapshot_return_type_mismatch.snap
---
source: crates/glyim-typeck/tests/snapshot_errors.rs
expression: errors
---
[
    InvalidReturnType {
        expected: Bool,
        found: Int,
    },
    InvalidReturnType {
        expected: Int,
        found: Bool,
    },
]
