crates/glyim-typeck/tests/snapshots/snapshot_errors__snapshot_unknown_field_access.snap
---
source: crates/glyim-typeck/tests/snapshot_errors.rs
expression: errors
---
[
    UnknownField {
        struct_name: "Point",
        field: "y",
        span: (
            0,
            0,
        ),
    },
]
